# mochi-ssg

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
.github/workflows/: build-latest.yml
examples/: example.3.1.conf  example.conf  rpc.c  rpc.h  run-example-conf.sh  run-example-margo-conf.sh  run-example-margo-dblgrp.sh  run-example-mpi.sh  ssg-example-margo-dblgrp.c  ssg-example-margo.c  ssg-example.c
include/: ssg-margo.h  ssg-mpi.h  ssg-pmix.h  ssg.h
maint/: ssg.pc.in
src/: Makefile.subdir  def.h  lookup3.c  ssg-internal.h  ssg-rpc.c  ssg.c
src/swim-fd/: Makefile.subdir  swim-fd-internal.h  swim-fd-ping.c  swim-fd.c  swim-fd.h
tests/: Makefile.subdir  join-group.sh  join-leave-group.sh  rpc.c  rpc.h  run-test-conf.sh  run-test-margo-conf.sh  run-test-margo-dblgrp.sh  run-test-mpi.sh  simple-group-mpi.sh  simple-group-pmix.sh  simple-group.sh  ssg-join-group.c  ssg-join-leave-group.c  ssg-launch-double-group.c  ssg-launch-double-mid-group.c  ssg-launch-group-drc.c  ssg-launch-group-finalize-cb.c  ssg-launch-group.c  ssg-observe-group-drc.c  ssg-observe-group.c  ssg-pmix-test.c  ssg-refresh-group-drc.c  ssg-refresh-group.c  ssg-swim-test.c  ssg-test-attach.c  ssg-test-fail.c  ssg-test-margo-dblgrp.c  ssg-test-margo.c  ssg-test-observe.c  ssg-test-pmix-fail.c  ssg-test-separate-group-attach.c  ssg-test-separate-group-create.c  ssg-test-separate-group-observe.c  ssg-test-separate-group-refresh.c  ssg-test-simple.c  ssg-test.c  test-util.sh  test.1.0.conf  test.1.1.conf  (+1 more)
tests/perf-regression/: README.md  margo-p2p-bw.c  margo-p2p-latency-avg-only.patch  margo-p2p-latency.c
tests/perf-regression/bebop/: README.md  README.spack.md  margo-p2p-latency-knl.sbatch  margo-p2p-latency.sbatch  margo-regression-knl.sbatch  margo-regression-spack.sbatch  margo-regression.sbatch  mercury-psm2-mr-basic.patch  run-regression-blocking-fifo.sh  run-regression-spack.sh  run-regression.sh  spack-libfabric-1.6.1.patch
tests/perf-regression/cooley/: README.md  README.spack.md  cooley-cci.conf  hg-verbs-no-lock.patch  margo-p2p-latency-ofi.qsub  margo-p2p-latency.qsub  margo-regression-ofi-rxm.qsub  margo-regression-ofi.qsub  margo-regression.qsub  run-regression-ofi-rxm.sh  run-regression-ofi.sh  run-regression.sh
tests/perf-regression/cooley/deprecated/: run-regression-ofi.sh  run-regression.sh
tests/perf-regression/theta/: README.md  README.spack.md  margo-p2p-latency-static.qsub  margo-p2p-latency.qsub  margo-regression-spack.qsub  margo-regression-static.qsub  margo-regression.qsub  run-regression-spack.sh  run-regression-static.sh  run-regression.sh  spack-shell.patch
tests/unit-tests/: Makefile.subdir  ssg-init.c
util/: get-swim-stats.pl
